--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "next start",
     "lint": "next lint",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d out"
+    "deploy": "gh-pages -d out --nojekyll"
   },
   "dependencies": {
     "@heroicons/react": "^2.1.4",
